# cookiecutter-pyproject

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements_dev.txt
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter_generation.py
{{cookiecutter.package_name}}/: .gitignore  .mutagen  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  justfile  pyproject.toml
{{cookiecutter.package_name}}/mkdocs/: Makefile  README.md  docker-compose.yml  mkdocs.yml
{{cookiecutter.package_name}}/mkdocs/docs/: advanced-usage.md  api-reference.md  contributing.md  index.md
{{cookiecutter.package_name}}/requirements/: requirements_dev.txt  requirements_test.txt
{{cookiecutter.package_name}}/src/{{cookiecutter.package_dir}}/: __init__.py  app.py  cli.py  core.py  entrypoint.py  logging.py  logging_config.py  models.py  settings.py  shutdown.py  stats.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_dir}}/data/: run-hidden.vbs  {{cookiecutter.package_name}}.cfg  {{cookiecutter.package_name}}.toml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_dir}}/mqtt/: __init__.py  client.py  models.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_dir}}/services/: baseasync.py  heartbeat.py
{{cookiecutter.package_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  settings.py
{{cookiecutter.package_name}}/tests/: test_settings.py  test_utils.py
{{cookiecutter.package_name}}/utility-scripts/: install-pi.sh  install-windows.ps1
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  Makefile  README.md  pyproject.toml  requirements_dev.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  settings.py
