[project]
name = "cookiecutter-pyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter>=2.6.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.0",
]
dev = [
    "binaryornot>=0.4.4",
    "build>=1.2.2.post1",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "sh>=2.2.2",
    "watchdog[watchmedo]>=6.0.0",
    "wheel>=0.45.1",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "8.0"
python_files = [
    "tests.py",
    "test_*.py",
]
norecursedirs = ["node_modules", "my-python-package", "{{cookiecutter.package_name}}"]
filterwarnings = "ignore::DeprecationWarning"
