[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_short_description }}"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

dynamic = ["version", "readme"]
requires-python = ">=3.6"
authors = [{ name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:run"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "flake8",
    "pylint",
    "wheel",
    "build",
]

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.project_slug }}.__version__"}
readme = {file = ["README.md", "HISTORY.md"]}
